
  * DistUpgradeQuirks.py:
    - make sure that snapd is installed before trying to use it.
      (LP: #1783589)
    - update the view with information regarding the progress of snaps being
      installed. (LP: #1783593)
    - when checking for connectivity to the snap store use C.UTF-8 for the
      language so error message matching works. (LP: #1783738)
  * DistUpgradeController.py: Remove debs from apt's "Dir::Cache::archives"
    folder after the upgrade has completed successfully.

 -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jul 2018 08:59:38 -0700

ubuntu-release-upgrader (1:18.10.5) cosmic; urgency=medium

  * DistUpgradeQuirks.py: when a snap fails to install try the next one
    instead of trying to check the return code of the called process which
    causes a Traceback. (LP: #1781412)

 -- Brian Murray <brian@ubuntu.com>  Thu, 12 Jul 2018 13:07:14 -0700

ubuntu-release-upgrader (1:18.10.4) cosmic; urgency=medium

  * DistUpgradeQuirks.py, DistUpgradeController.py: move inhibiting of
    gnome-session idle so that it is called immediately after the upgrade
    starts (LP: #1778817), present a dialog notifying that the lock screen has
    been disabled (LP: #1174093), and do not reenable the lock screen as it
    may fail to work after a release upgrade. (LP: #1780342)
  * DistUpgradeQuirks.py: Add in a quirk for upgrading to Cosmic that will
    check if the system has connectivity to the snap store and replace some
    desktop packages with snaps to ensure the system is similar to a fresh
    install.

 -- Brian Murray <brian@ubuntu.com>  Fri, 06 Jul 2018 11:21:11 -0700

ubuntu-release-upgrader (1:18.10.3) cosmic; urgency=medium

  [ Dimitri John Ledkov ]
  * Purge obsolete packages, if user agrees to remove obsolete
    packages. LP: #1749199
  * Make dist-upgrade.py work when PWD != datadir, by fixing the logic for
    finding and loading .release config files with datadir prepended
    first.

  [ Brian Murray ]